[tool.poetry]
name = "machinelearningfromscratch"
version = "0.1.0"
description = ""
authors = ["ThomasStalley <tstalley@realla.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

